initial commit after updates

--- a/views/citysigners.handlebars
+++ b/views/citysigners.handlebars
@@ -1,5 +1,10 @@
-<div class="citysigners">
-    <img id="spice4" src="http://cdn1-www.musicfeeds.com.au/assets/uploads/spice-Cropped-671x377.jpg" alt="">
+<div class="photoback">
+    <img src="/stall.jpg" alt="">
+</div>
+<h1 class="heading">Wo sind die Toiletten?</h1>
+
+<div class="signByCity">
+
     <h2>These people have signed the petition in <span>{{here}}</span></h2>
         {{#each signers}}
             <p>
