--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,6 +1,10 @@
+<div class="photoback">
+    <img src="./stall.jpg" alt="">
+</div>
+<h1 class="heading">Wo sind die Toiletten?</h1>
 <div class="signers">
     <br>
-    <img class="jumping" src="spice-world-the-movie.jpg" alt="">
+    <!-- <img class="jumping" src="spice-world-the-movie.jpg" alt=""> -->
     <h2>These people have signed the petition</h2>
         {{#each signers}}
             <p>
