--- a/public/styles.css
+++ b/public/styles.css
@@ -1,13 +1,20 @@
+*{
+    box-sizing: border-box;
+}
 body {
+    margin: 0;
     font-family: "Tajawal", sans-serif;
     font-weight: 400;
-    background: rgb(187, 206, 223);
-    background: linear-gradient(
+    /* background: #738E70; */
+    /* background: rgb(222, 227, 230); */
+
+    /* background: linear-gradient(
         0deg,
         rgba(187, 206, 223, 1) 3%,
         rgba(255, 255, 255, 1) 81%
-    );
-    height: 800px;
+    ); */
+    height: 100%;
+    overflow-y: scroll;
 }
 
 h1 {
@@ -22,16 +29,65 @@ h3 {
     color: red;
 }
 
-.home {
-    padding: 10px;
-    text-align: center;
+.heading{
+    font-family: 'Permanent Marker', cursive;
+    z-index: 104;
+    font-size: 80px;
+    /* opacity: 1; */
+    color: #0F281F;
+    margin-top: 80px;
+    /* padding-top: 30px; */
+    position: relative;
+    background: rgba(255, 255, 255, 0.5);
 }
 
-.logintable {
+
+/* ////////////  REGISTRATION   //////////// */
+.photoback{
     display: block;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    /* border: 1px solid black; */
+}
+.photoback img{
+    /* height: 100%; */
+    width: 100%;
+    z-index: -34;
+    opacity: 0.8;
+    object-fit: cover;
+    object-position: center;
+}
+
+.home {
+    /* background-image: url("/stall.jpg"); */
+    padding: 10px;
+    margin-top: 50px;
+    /* height: 100%; */
     text-align: center;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+
+}
+
+.registerBox{
+    background-color: rgba(255, 255, 255, 0.8);
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    width: 40%;
+    align-self: center;
+    /* margin: auto 0; */
+    z-index: 34;
+}
+
+.registerBox  button{
+    width: 70px;
+    height: 25px;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
 .registertable {
@@ -39,8 +95,145 @@ h3 {
     text-align: center;
     margin: 0 auto;
     margin-bottom: 10px;
+    border-radius: 3px;
+    height: 20px;
 }
 
+.infoBox{
+    background-color: rgba(255, 255, 255, 0.8);
+    border-radius: 3px;
+    height: 400px;
+    width: 40%;
+    /* border: 1px solid black; */
+    z-index: 34;
+    padding: 15px;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.logintable {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    border-radius: 3px;
+    height: 20px;
+    /* border-radius: 3px; */
+}
+.loginBox{
+    background-color: rgba(255, 255, 255, 0.8);
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    width: 40%;
+    z-index: 34;
+}
+.loginBox  button{
+    width: 70px;
+    height: 25px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.petitionPage{
+    /* border: 1px solid black; */
+    /* background: #8BB17B; */
+    height: 100%;
+    width: 100%;
+    position: relative;
+    z-index: 333;
+}
+.signBox{
+    padding: 40px;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    width: 40%;
+    min-width: 450px;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.8);
+}
+.canvasStuff{
+    text-align: center;
+}
+.thanksContents{
+    padding: 40px;
+    position: relative;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    width: 40%;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.8);
+}
+
+.signers {
+    text-align: center;
+    /* height: 800px; */
+    background: rgba(255, 255, 255, 0.8);
+    position: relative;
+    z-index: 10;
+
+    max-height: 500px;
+    width: 60%;
+    border-radius: 10px;
+    margin: 0 auto;
+    overflow: scroll;
+}
+
+.editPage{
+    padding: 40px;
+    position: relative;
+    text-align: center;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    width: 40%;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.8);
+}
+.profileEditPage{
+    padding: 40px;
+    position: relative;
+    text-align: center;
+    /* border: 1px solid black; */
+    border-radius: 5px;
+    width: 40%;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.9);
+}
+.signByCity{
+    padding: 40px;
+    position: relative;
+    /* border: 1px solid black; */
+    text-align: center;
+    border-radius: 5px;
+    width: 40%;
+    margin: 0 auto;
+    background: rgba(255, 255, 255, 0.8);
+}
+.flex-grid{
+    display: flex;
+    justify-content: space-around;
+}
+.flex-grid input{
+    text-align: center;
+    /* display: block; */
+    /* margin: 0 auto; */
+    margin-bottom: 15px;
+    border-radius: 5px;
+    height: 20px;
+}
+.editProfileButton{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    height: 30px;
+    width: 75px;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+}
+#urlInput{
+    width: 250px;
+}
 #deletesig {
     text-align: center;
     margin: 0 auto;
@@ -50,13 +243,15 @@ h3 {
     border: 2px solid black;
     color: black;
     cursor: crosshair;
+    display: block;
+    margin: 0 auto;
 }
 
-img {
+/* img {
     height: 200px;
     margin: 0 auto;
     display: block;
-}
+} */
 
 #sigPic {
     height: 100px;
@@ -76,17 +271,7 @@ img {
     font-size: 18px;
 }
 
-.signers {
-    text-align: center;
-    height: 800px;
-    background: rgb(187, 206, 223);
-    background: linear-gradient(
-        0deg,
-        rgba(187, 206, 223, 1) 3%,
-        rgba(255, 255, 255, 1) 81%
-    );
-    overflow: scroll;
-}
+
 
 h2 {
     text-align: center;
@@ -97,7 +282,7 @@ h2 {
     height: 150px;
 }
 
-.citysigners {
+/* .citysigners {
     text-align: center;
     background: rgb(187, 206, 223);
     background: linear-gradient(
@@ -106,17 +291,29 @@ h2 {
         rgba(255, 255, 255, 1) 81%
     );
     height: 800px;
-}
+} */
 
 .credentials {
     font-style: italic;
+    /* display: block; */
 }
 
-.editProfile,
+
 .profiletable {
-    display: block;
+    /* display: block; */
+
     text-align: center;
     margin: 1px auto;
+}
+.editProfile {
+    /* display: block; */
+
+    text-align: center;
+    margin: 1px auto;
+}
+.editProfile{
+    border-radius: 3px;
+    height: 20px;
 }
 
 .firstName {
