--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title></title>
+        <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Tajawal:400,700" rel="stylesheet">
     </head>
     <body class="layout">
-
         {{{ body }}}
-    
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/canvas.js"></script>
     </body>
