--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -9,14 +9,15 @@
 
     <form id="profileTable" method="POST">
         <input class="profiletable" type="text" name="age" placeholder="age">
-        <br>
+        <!-- <br> -->
+
         <input class="profiletable" type="text" name="city" placeholder="city">
-        <br>
+        <!-- <br> -->
         <input class="profiletable" type="url" name="url" placeholder="url">
 
         <input type="hidden" name="_csrf" value="{{csrfToken}}">
         <br>
-        <button type="submit" name="button">Continue</button>
+        <button class="editProfileButton" type="submit" name="button">Continue</button>
     </form>
 
     <h3><a href="/petition">Skip this step</a></h3>
