added title and updates content

--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -56,10 +56,15 @@
             <h3>If you're already registered, please <a href="/login">log in</a> here</h3>
         </div>
         <div class="infoBox">
-            <p class="firstP">Have you ever been wandering through Berlin and noticed the lack of public toilets? Maybe on sunny day in Weinbergspark, while having a beer with friends you realised that your only option for a toilet was to sneak into a nearby restaurant or cafe. Or possibly at Volkspark Friedrichshain, when the relief you felt once spotting their toilets near the park’s entrance quickly turned into dismay as you approach and realise they are closed for the season. Or perhaps your situation was coming across the public toilets that cost 50 cents, but then finding that you spent your last bit of change already.</p>
-            <p class="secondP">Whatever the circumstances may have been, there should have been a public toilet available to you. Paris has approximately 400 public (and free) toilets spread throughout the city, and there’s no reason that Berlin can’t follow their lead and attempt to offer more facilities to its residents and visitors. Please join us and sign our petition to get more facilities and easier access to public toilets throughout the city of Berlin.</p>
+            <p class="firstP">Have you ever been wandering through Berlin and noticed the lack of public toilets? Maybe on sunny day in Weinbergspark,
+                 while having a beer with friends you realized that your only option for a toilet was to sneak into a nearby restaurant or cafe.
+                 Or possibly at Volkspark Friedrichshain, when the relief you felt once spotting their toilets near the park’s entrance quickly turned
+                 into dismay as you approach and realise they are closed for the season. Or perhaps your situation was coming across the public toilets
+                 that cost 50 cents, but then finding that you spent your last bit of change already.</p>
+            <p class="secondP">Whatever the circumstances may have been, there should have been a public toilet available to you. Paris has approximately
+                400 public (and free) toilets spread throughout the city, and there’s no reason that Berlin can’t follow their lead and attempt to offer
+                more facilities to its residents and visitors. Please join us and sign our petition for easier access to public
+                toilets throughout the city of Berlin.</p>
         </div>
-
-
     </div>
 </div>
